# collision-zone

./: .gitignore  .gitmodules  CMakeLists.txt  GameProtocol.md  README.md  derby-gameserver.code-workspace  index.js  kollisio.code-workspace  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.prod.js
assets/gimp/: truck.xcf
assets/ts/game/: Client.ts  GameScene.ts  Player.ts  Wall.ts  entry.ts  gamestate.ts  input.ts  protocol.ts
assets/ts/game/view/: gamescene.ts  input.ts  loadingscene.ts  player.ts  scene.ts  wall.ts
client/game/: Client.js  GameServer.js  gameScene.js  main.js  player.js
img-src/: boost-particle.xcf  truck.xcf
lib/: CMakeLists.txt
public/scripts/game/: core.js  gameInstance.js  gameScene.js  player.js
public/styles/: game.css
public/views/: game.html
server-game/: .gitattributes  .gitignore  CMakeLists.txt
server-game/app/: CMakeLists.txt  Client.hpp  ClientSource.hpp  Server.hpp  WebSocketClient.cpp  WebSocketClient.hpp  WebSocketClientSource.cpp  WebSocketClientSource.hpp  main.cpp
server-game/common/: CMakeLists.txt
server-game/game/: Arena.hpp  CMakeLists.txt  Player.cpp  Player.hpp  Request.hpp
server-game/src/: main.cpp
server-game/src/snowplowderby/: constants.hpp
server-game/src/snowplowderby/client/: Client.cpp  Client.hpp  ClientSource.cpp
server-game/src/snowplowderby/event/: Event.cpp
server-game/src/snowplowderby/game/: Arena.cpp  Arena.hpp  Player.cpp  Player.hpp  Request.hpp  Wall.cpp
server-game/src/snowplowderby/server/: Server.cpp  Server.hpp
server-game/src/snowplowderby/websocket/: WebSocketClient.cpp  WebSocketClient.hpp
server-game/src/util/: log.cpp  log.hpp  physics.hpp  util.hpp
server-main/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js
server-main/assets/gimp/: dead-particle.xcf  preview.xcf  truck.xcf
server-main/assets/ts/: util.ts
server-main/assets/ts/game/: gamestate.ts  protocol.ts
server-main/assets/ts/game/view/: input.ts  loadingscene.ts  player.ts  wall.ts
server-main/public/styles/: game.css
src/: Arena.hpp  Client.cpp  Client.hpp  Player.cpp  Player.hpp  index.js  main.cpp  util.ts
src/client/game/: Arena.ts  Client.ts  GameScene.ts  Player.ts  Wall.ts  entry.ts  main.ts
src/snowplowderby/: Arena.cpp  Arena.hpp  Client.cpp  Client.hpp  Player.cpp  Player.hpp  constants.hpp
src/snowplowderby/client/: Client.cpp  Client.hpp  ClientSource.cpp  ClientSource.hpp
src/snowplowderby/event/: Event.hpp
src/snowplowderby/game/: Arena.cpp  Arena.hpp  Player.cpp  Player.hpp  Request.cpp  Wall.cpp  Wall.hpp
src/snowplowderby/io/: s2c.hpp
src/snowplowderby/server/: Server.cpp  Server.hpp
src/snowplowderby/websocket/: WebSocketClient.cpp  WebSocketClient.hpp  WebSocketClientSource.cpp  WebSocketClientSource.hpp  WebSocketListener.cpp  WebSocketListener.hpp
src/util/: log.cpp  log.hpp  physics.hpp  util.hpp
